2020-10-21  Jay Berkenbilt  <ejb@ql.org>

	* Qpdf's build and CI has been migrated from Azure Pipelines
	(Azure Devops) to GitHub Actions.

	* Ensure that numeric conversion is not affected by the user's
	global locale setting. Fixes #459.

	* Add qpdf-<version>-linux-x86_64.zip to the list of built
	distributions. This is a simple zip file that contains just the
	qpdf executables and the dependent shared libraries that would not
	ordinarily be present on a base system. This minimal binary
	distribution works as is when used as a Lambda layer in AWS and
	could be suitable for inclusion in a docker image or other
	standalone Linux/x86_64 environment where you want minimal support
	for running the qpdf executable. Fixes #352.

2020-10-20  Jay Berkenbilt  <ejb@ql.org>

	* Add --warning-exit-0 option to the qpdf command line. When
	specified, qpdf will exit with a status of 0 rather than 3 when
	there are warnings without errors. Combine with --no-warn to
	completely ignore warnings.

	* Bug fix: fix further cases in which errors were written to
	stdout. Fixes #438.

	* Build option: add --disable-rpath option to ./configure, which
	disables passing -rpath to the linker when building shared
	libraries with libtool. Fixes #422.

2020-10-18  Jay Berkenbilt  <ejb@ql.org>

	* Note that InputSource::unreadCh is deprecated and will be
	removed in qpdf 11. Use seek(-1, SEEK_CUR) instead. This is what
	it has always effectively done with some input sources and some
	operating systems which don't allow unreading other than the most
	recently read character. InputSource::unreadCh is no longer used
	internally within libqpdf.

2020-10-16  Jay Berkenbilt  <ejb@ql.org>

	* Accept pull request that improves how the Windows native crypto
	provider is obtained.

	* Accept pull request that improves performance in processing
	files in memory.

	* Accept pull requests that improve openssl configuration and
	error reporting.

	* Build using GitHub Actions. The intention is that this will